risky-nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  name: nginx-risky-pod
  labels:
    run: nginx-risky-pod
spec:
  volumes:
    - name: vol
      hostPath:
        path: /etc
  shareProcessNamespace: true
  containers:
  - name: nginx-risky-pod
    image: nginx
    ports:
    - containerPort: 80
    resources: {}
    securityContext:
      capabilities:
        add:
          - ALL
      readOnlyRootFilesystem: true
      allowPrivilegeEscalation: true
    volumeMounts:
      - name: vol
        mountPath: /opt
  dnsPolicy: ClusterFirst
  restartPolicy: always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: nginx-risky-pod
  name: risky-pod-svc
spec:
  selector:
    run: nginx-risky-pod
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
